--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas repellendus ipsam incidunt deserunt minus quo, reprehenderit facilis nostrum placeat, rerum harum maxime ad id. Ea nobis delectus magni hic?</p>
+    <a href="#" class="link-arrow">Learn More</a>
 </body>
 </html>
