Designed the badges for cards.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <a href="#" class="link-arrow">Learn More</a>
+ <span class="badge badge--primary">10% off</span>
 </body>
 </html>
