Created the lists section.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
- <span class="badge badge--primary">10% off</span>
+<ul class="list list--tick">
+    <li class="list__item">Item 1</li>
+    <li class="list__item">Item 2</li>
+    <li class="list__item">Item 3</li>
+</ul>
 </body>
 </html>
