--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-    
+     <blockquote class="quote">
+      <p class="quote__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, perferendis.</p>
+     <footer>
+      <div class="media">
+        <div class="media__image">
+            <svg class="icon icon--primary quote__line ">
+             <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+        </div>
+        <div class="media__body">
+          <h3 class="media__title quote__author">Sumit Raut</h3>
+          <p class="quote__company">
+            OSMR Pvt.limited.
+          </p>
+        </div>
+      </div>
+     </footer>
+    </blockquote>
   </body>
 </html>
